# monotabe

./: .gitignore  Cargo.toml  DESIGN.MD  README.md  TODO.MD
src/: app.rs  config.rs  debug.rs  main.rs  message.rs  sync_gen.rs
src/audio/: mod.rs  pitch.rs  player.rs
src/db/: store.rs
src/llm/: claude.rs
src/model/: media.rs  mod.rs  song.rs  sync_map.rs
src/pdf/: mod.rs  renderer.rs  tab_detector.rs
src/ui/: library.rs  media_bar.rs  mod.rs  pdf_viewer.rs  song_detail.rs  song_form.rs
src/webview/: gtk_window.rs  mod.rs
