[package]
name = "monotabe"
version = "0.1.0"
edition = "2021"

[dependencies]
iced       = { version = "0.12", features = ["tokio", "image"] }
tokio      = { version = "1", features = ["full"] }
rusqlite   = { version = "0.31", features = ["bundled"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4"] }
dirs       = "5"
rfd = "0.17.2"
rodio = { version = "0.22.2", features = ["symphonia-all"] }
open       = "5.3.5"
gtk        = "0.18"
webkit2gtk = "2"
reqwest = { version = "0.13.4", features = ["json"] }
base64 = "0.22.1"
